# todo

./: Procfile  pyproject.toml
django_todo/: db.sqlite3
django_todo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_todo/mysite/: settings.py  urls.py
django_todo/polls/: models.py  views.py
django_todo/polls/migrations/: 0001_initial.py
django_todo/staticfiles/todo/js/: todo.js
django_todo/todo/: admin.py  forms.py  models.py  urls.py  views.py
django_todo/todo/migrations/: 0001_initial.py  0002_auto_20180520_1953.py  0003_auto_20180520_1954.py  0004_task_complete.py
django_todo/todo/static/todo/css/: styles.css
django_todo/todo/templates/todo/: add.html  all.html  completed.html  current_tasks.html  done_tasks.html  edit.html  index.html
tests/: test_todoapp.py
