[tool.poetry]
name = "ToDoApp"
version = "0.1.0"
description = ""
authors = ["jdinx <39510742+jdinx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
