[tool.poetry]
name = "django_todo"
version = "0.1.0"
description = ""
authors = ["jdinx <39510742+jdinx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
django = "^3.1.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
